# semantica-codegraph

./: .claude  .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  BENCHMARK.md  alembic.ini  benchmark  cleanup_connections.py  cspell.json  docker-compose.otel.yml  docker-compose.yml  pyproject.toml  quick_test.py  reindex_with_profiling.py  run_003_migration.py  run_006_migration.py  run_api.sh  run_migration.py  run_migrations_003_004.py  test_90_percent_verification.py  test_create_parser.py  test_enhanced_parser.py  test_full_pipeline.py  test_pattern_analyzer.py  test_profiling.py  test_reindex_and_search.py  test_search.py  test_test_code_analyzer.py
.ai/: PROJECT.md  README.md
.doc/: BENCHMARK.md  HOW_TO_BENCHMARK.md  benchmark-quick-guide.md  benchmarks-guide.md  migrations-guide.md
.profiler/: profiler_detailed.py
alembic/: __init__.py  env.py
alembic/versions/: 001_initial_schema.py
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/model/: __init__.py  hybrid.py
apps/api/routes/: hybrid.py  nodes.py  repos.py  search.py
apps/benchmarks/: __init__.py  check.py  compare.py  quickstart.py  run.py
apps/benchmarks/datasets/: example_ground_truth.json  example_queries.txt  semantica_ground_truth.json  semantica_queries.txt
apps/cli/: __init__.py  app.py  app2.py  interactive.py  main.py  tui.py
apps/mcp_server/: __init__.py  handlers.py  server.py  service.py
benchmarks/: README.md  __init__.py  check.py  compare.py  quickstart.py  run.py
benchmarks/datasets/: example_ground_truth.json  example_queries.txt  semantica_ground_truth.json  semantica_queries.txt
benchmarks/evaluators/: __init__.py  cody.py  metrics.py  semantica.py
db_migrations/: __init__.py  env.py
docs/: LANGFUSE_CLOUD_SETUP.md  LANGFUSE_SELFHOSTED.md  OBSERVABILITY_COMPLETE.md  OBSERVABILITY_QUICKSTART.md  OBSERVABILITY_STACK.md  OBSERVABILITY_TEST_RESULTS.md  OTEL_QUICKSTART.md  SPAN_CONFIGURATION.md  SPAN_RECOMMENDATIONS.md  chunking-pipeline.md  chunking-strategy.md  cli-development-guide.md  indexing-pipeline-detailed.md  opentelemetry-deployment.md  opentelemetry-implementation-examples.md  opentelemetry-integration.md  opentelemetry-recommendation.md  semantic-indexing-optimization.md
docs/adr/: 013-file-summary-chunks.md  adr_0001_codegraph-intro.md  adr_0002_normalized-symbol.md  adr_0003_language-parsing-architecture.md  adr_0004_route-index.md  adr_0005_symbol-index.md  adr_0006_hybrid-retrieval.md  adr_0007_raptor-chunking.md  adr_0008_embedding-strategy.md  adr_0009_search-api-structure.md  adr_0010_ast-diff-context-provider.md  adr_0011_semantic-nodes-query-logs.md
examples/: full_search_pipeline.py  test_fuzzy_search.py  test_prompt_generation.py
migrations/: 001_init_schema.sql  002_add_profiling_tables.sql  003_add_symbol_indices.sql  004_create_route_index.sql  005_semantic_nodes.sql  006_query_logs.sql  README.md
scripts/: check_edges.py  measure_coverage.py  test_search_accuracy.py
src/: __init__.py
src/chunking/: __init__.py  chunk_tagger.py  chunker.py  file_summary_builder.py  search_text_builder.py  store.py
src/context/: __init__.py  packer.py
src/core/: bootstrap.py  config.py  enums.py  models.py  phoenix_integration.py  ports.py  repo_store.py  span_config.py  telemetry.py
src/embedding/: __init__.py  service.py  store_pgvector.py
src/graph/: __init__.py  ir_builder.py  store_postgres.py
src/indexer/: __init__.py  file_profiler.py  pipeline.py  repo_profiler.py  repo_scanner.py  route_extractor.py  route_store.py  semantic_node_store.py  symbol_summary_builder.py
src/parser/: __init__.py  base.py  cache.py  enhanced_parser.py  hybrid_parser.py  pattern_analyzer.py  python_parser.py  scip_parser.py  test_code_analyzer.py  text_parser.py  type_hint_analyzer.py  typescript_parser.py
src/search/: __init__.py  query_classifier.py  query_log_analyzer.py  query_log_store.py
tests/: __init__.py  conftest.py
tests/chunking/: __init__.py  test_chunk_store.py  test_chunker.py
tests/context/: test_packer.py  test_packer_improvements.py
tests/core/: test_bootstrap.py  test_config.py  test_enums.py  test_repo_store.py
tests/embedding/: __init__.py  test_integration.py  test_pgvector_store.py  test_service.py
tests/fixtures/: sample_python.py  sample_typescript.ts
tests/graph/: __init__.py  test_ir_builder.py  test_postgres_store.py
tests/indexer/: test_pipeline.py  test_pipeline_logic.py  test_repo_scanner.py  test_repo_scanner_filters.py
tests/integration/: test_text_indexing_pipeline.py
tests/parser/: __init__.py  test_hybrid_parser.py  test_python_parser.py  test_scip_parser.py  test_text_parser.py  test_type_hint_analyzer.py  test_typescript_parser.py
tests/search/: test_fusion_strategies.py  test_fuzzy_search.py  test_graph_search.py  test_hybrid_ranker.py  test_hybrid_retriever.py  test_query_classifier.py  test_ranker.py  test_semantic_search.py
(+70 files in other folders)
