[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantica-codegraph"
version = "0.1.0"
description = "Code graph indexing and search system"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "pgvector",
    "meilisearch",
    "rank-bm25",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "protobuf>=4.21.0",  # SCIP uses protobuf
    "mistralai>=1.0.0",  # Mistral Codestral Embed
    "python-dotenv>=1.0.0",  # .env 파일 로드
    "click>=8.0.0",  # CLI 프레임워크
    "rich>=13.0.0",  # TUI 라이브러리
    "textual>=0.50.0",  # TUI 프레임워크 (Rich 기반)
    "fastapi>=0.100.0",  # HTTP API 프레임워크
    "uvicorn[standard]>=0.23.0",  # ASGI 서버
    "pydantic>=2.0.0",  # 데이터 검증
    "tiktoken>=0.5.0",  # 정확한 토큰 카운팅
    "rapidfuzz>=3.0.0",  # 퍼지 문자열 매칭
    "mcp>=1.0.0",  # Model Context Protocol SDK
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

embedding = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

llm = [
    "litellm>=1.0.0",  # 통합 LLM 인터페이스 (OpenAI, Anthropic, Ollama 등)
]

[tool.setuptools.packages.find]
where = ["src", "."]

[project.scripts]
semantica = "apps.cli.main:main"
semantica-api = "apps.api.main:main"
semantica-mcp = "apps.mcp_server.server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"**/tests/**" = ["ARG", "S101"]  # allow assert in tests
"apps/api/main.py" = ["E402"]  # sys.path.insert 후 import 허용
"apps/benchmarks/**" = ["E402"]  # sys.path.insert 후 import 허용
"apps/mcp_server/server.py" = ["E402"]  # sys.path.insert 후 import 허용
"scripts/**" = ["E402"]  # sys.path.insert 후 import 허용

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    "tests/",
    "alembic/",
    "apps/benchmarks/",
    "scripts/",
]
